# X-Ray-Controller

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md
doc/: doc.md  duvidas.md  i2c.md  motor.md
lib/: pid.h
src/: Uart.cpp  bme280Sensor.cpp  bme280Sensor.h  bmp280Controller.cpp  bmp280Controller.h  exercicio1.cpp  exercicio2.cpp  gpio-test.cpp  gpio.h  gpioController.cpp  gpioController.h  i2cController.cpp  i2cController.h  main.cpp  main2.cpp  modbusController.cpp  modbusController.h  motor-test.cpp  motorController.cpp  motorController.h  pidController.cpp  pidController.h  uart-test.cpp  uart.cpp  uart.h  uartController.cpp  uartController.h
